--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Pizza Site</title>
+    <title>Pizza place</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="navigation-container">
         <div class="navigation-content">
-            <div class="logo"><img src="images/logo.png" /></div>
+            <div class="logo"><img src="assets/logo1.png" /></div>
             <div class="menu">
                 <ul>
                     <li><a href="#">MENU</a></li>
@@ -19,18 +21,15 @@
                 </ul>
             </div>
             <div class="cart">
-                <img height="30px" src="images/cart.png">
+                <img src="assets/cart.jpg">
                 <a href="#">Cart</a>
             </div>
         </div>
     </div>
     <!--------NAVIAGTION-END------------->
     <div class="content-container">
-        <div class="whats-new">
-            <img src="images/WHATS NEW.png">
-        </div>
+        <br><br><br>
         <div class="content">
-            <!--1------------------------------------>
             <div class="first-row">
                 <div class="new">
                     <p>GRILLED CHICKEN</p>
@@ -78,21 +77,6 @@
                     <div class="price"><button>$3<sup>99</sup></button></div>
                 </div>
             </div>
-            <!--3------------------------------------->
-            <div class="third-row">
-                <div class="flavor">
-                    <a href="#">
-                        <p>FLAVOR MENU</p>
-                        <p>VAGITABEL-HAND TOSED</p>
-                    </a>
-                </div>
-                <div class="breakfast">
-                    <a href="#">
-                        <p>BREAKFAST MENU</p>
-                        <p>PARANTHA ROLL</p>
-                    </a>
-                </div>
-            </div>
         </div>
     </div>
     <!------------------------------->
@@ -117,7 +101,7 @@
         </div>
         <!--NAVIGATION-END--------------->
         <div class="copyright">
-            <p>Copyright 2020 Pizzaro Theme.Going-To Internet</p>
+            <p>Copyright 2020 pizza place</p>
         </div>
     </div>
 </body>
