--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <!--------NAVIAGTION-END------------->
-    <div class="content-container">
+    <div class="container-fluid">
         <br><br><br>
         <div class="content">
             <div class="first-row">
@@ -60,48 +60,70 @@
                         <p>VEGGIE</p>
                         <p>SPECIAL</p>
                     </div>
-                    <div class="price"><button>$9<sup>99</sup></button></div>
+                    <div class="price"><button>Ksh1200</button></div>
                 </div>
                 <div class="food-two">
                     <div class="name">
-                        <p>CHICKEN WRAP</p>
-                        <p>SPECIAL</p>
+                        <p>BARBECUE</p>
+                        <p>CHICKEN</p>
                     </div>
-                    <div class="price"><button>$5<sup>99</sup></button></div>
+                    <div class="price"><button>Ksh 800</button></div>
                 </div>
                 <div class="food-three">
                     <div class="name">
-                        <p>ICE COFFE</p>
-                        <p>SUMMER</p>
+                        <p>YUMMY</p>
+                        <p>EXTRA CHEESE</p>
                     </div>
-                    <div class="price"><button>$3<sup>99</sup></button></div>
+                    <div class="price"><button>Ksh 650</button></div>
                 </div>
             </div>
         </div>
-    </div>
-    <!------------------------------->
-    <div class="footer">
-        <div class="navigation-content">
-            <div class="logo"><img src="images/logo.png" /></div>
-            <div class="menu footer-menu">
-                <ul>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">CONTACT US</a></li>
-                    <li><a href="#">TEAM</a></li>
-                    <li><a href="#">SUPPORT</a></li>
-                </ul>
+        <div class="order1 row" id="your-order">
+            <div class="col-md-6">
+                <h3>Kindly make your order below</h3>
+                <form action="" id="my-order">
+                    <label for="">Select your pizza size</label>
+                    <select class="form-control" name="size" id="size">
+                        <option value="1200">Large @ ksh 1200</option>
+                        <option value="800">Medium @ ksh 800</option>
+                        <option value="650">Small @ ksh 650</option>
+                    </select><br>
+                    <label for="">Choose your preferred toppings</label> <br>
+                    <input value="100" type="checkbox" id="topping">Pepperoni
+                    <input value="100" type="checkbox" id="topping">Mushroom
+                    <input value="100" type="checkbox" id="topping">Extra Cheese
+                    <input value="100" type="checkbox" id="topping">Green Pepper
+                    <input value="100" type="checkbox" id="topping">Onion
+                    <br> <br>
+                    <label for="">Select crust type</label>
+                    <select class="form-control" name="" id="crust">
+                        <option value="250" name="crust">stuffed crust @ ksh 250
+                        <option value="350" name="crust">Crispy @ ksh 350
+                        <option value="230" name="crust">Glutten free @ ksh 230
+                    </select>
+
+                    <br>
+                    <label for="">Quantity</label>
+                    <select class="form-control" name="" id="crust">
+                        <option value="1" name="crust" id="quantity">1
+                        <option value="2" name="crust" id="quantity">2
+                        <option value="3" name="crust" id="quantity">3
+                        <option value="4" name="crust" id="quantity">4
+                        <option value="5" name="crust" id="quantity">5
+                        <option value="6" name="crust" id="quantity">6
+                        <option value="7" name="crust" id="quantity">7
+                        <option value="8" name="crust" id="quantity">8
+                        <option value="9" name="crust" id="quantity">9
+                        <option value="10" name="crust" id="quantity">10
+                    </select>
+                    <br>
+                    <div class="btn-group">
+                        <button class=" btn btn-success" name="button" type="submit" id="submit" value=""
+                            onclick="">Order</button>
+                    </div>
+
+                </form>
             </div>
-            <div class="social">
-                <ul>
-                    <li><a href="#"><img src="images/facebook.png"></a></li>
-                    <li><a href="#"><img src="images/twitter.png"></a></li>
-                    <li><a href="#"><img src="images/youtube.png"></a></li>
-                </ul>
-            </div>
-        </div>
-        <!--NAVIGATION-END--------------->
-        <div class="copyright">
-            <p>Copyright 2020 pizza place</p>
         </div>
     </div>
 </body>
