Add delivery section

--- a/index.html
+++ b/index.html
@@ -124,6 +124,26 @@
 
                 </form>
             </div>
+            <div class="col-md-6">
+                <div id="we-deliver">
+                    <h3>We make deliveries to your door step</h3>
+                    <form id="delivery" class="form-group">
+                        <label for="name">Name</label>
+                        <input class="form-control" type="text" name="" id="name" required="required">
+                        <br>
+                        <label for="location">Location</label>
+                        <input class="form-control" type="text" id="location" placeholder="location...">
+                        <br>
+                        <label for="phonenumber">Phone Number</label>
+                        <input class="form-control" type="tel" placeholder="+254xxxxxxxx" id="number">
+                        <br>
+                        <div class="btn-group">
+                            <button class="btn btn-success" type="submit" name="button" id="submit">submit</button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </body>
