--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <form action="" id="my-order">
                         <label for="">Select your pizza size</label>
                         <select class="form-control" name="size" id="size">
+                            <option selected disabled>select</option>
                             <option value="1200">Large</option>
                             <option value="800">Medium</option>
                             <option value="650">Small</option>
@@ -99,25 +100,30 @@
                         </select> <br>
                         <label for="">Select crust type</label>
                         <select class="form-control" name="" id="crust1">
+                            <option selected disabled>select</option>
                             <option value="200" name="crust">stuffed crust
                             <option value="300" name="crust">Crispy
                             <option value="250" name="crust">Glutten free
                         </select>
 
                         <br>
-                        <label for="">Quantity</label>
+                        <!-- <label for="">Quantity</label>
                         <select class="form-control" name="" id="qty">
-                            <option value="1" name="crust" id="quantity">1
-                            <option value="2" name="crust" id="quantity">2
-                            <option value="3" name="crust" id="quantity">3
-                            <option value="4" name="crust" id="quantity">4
-                            <option value="5" name="crust" id="quantity">5
+                            <option value="0" name="crust" id="quantity">1
+                            <option value="1" name="crust" id="quantity">2
+                            <option value="2" name="crust" id="quantity">3
+                            <option value="3" name="crust" id="quantity">4
+                            <option value="" name="crust" id="quantity">5
                             <option value="6" name="crust" id="quantity">6
                             <option value="7" name="crust" id="quantity">7
                             <option value="8" name="crust" id="quantity">8
                             <option value="9" name="crust" id="quantity">9
                             <option value="10" name="crust" id="quantity">10
-                        </select>
+                        </select> -->
+                        <div class="form-group">
+                            <label for="name">Quantity</label>
+                            <input type="number" class="form-control" name="" id="qty">
+                        </div>
 
 
                     </form>
@@ -140,7 +146,7 @@
 
                     </div>
                     <div class="form-group actualAdress">
-                        <label for="name">Add Your Address</label><br><br>
+                        <label for="name">Enter Your Address</label><br><br>
                         <input type="text" class="form-control" name="" id="address">
                     </div>
                     <div class="form-group">
