--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <th>Crust</th>
                     <th>Toppings</th>
                     <th>Quantity</th>
-                    <th id="totalOrder">Total</th>
+                    <th id="totalPerOrder">Total</th>
 
                 </thead>
                 <tr></tr>
