--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <h3>We make deliveries to your door step!</h3>
                         <h3>At a cost of Ksh 150 only</h3>
                         <br><br>
-                        <div class="form-group radioBtn">
+                        <div class="form-group pick">
                             <label for="delivery">Delivery or Pickup?</label>
                             <div class="center">
                                 <input type="radio" id="yes" name="delivery">
